<resources>
    <string name="app_name">AccountBook</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="auto_task_header">定时任务</string>
    <string name="security_header">密码与安全</string>
    <string name="date_service_header">数据服务</string>
    <string name="others_header">其他设置</string>

    <!-- auto_task Preferences -->
    <string name="account_title">自动记账</string>
    <string name="backup_title">自动备份</string>
    <string name="alarm_title">记账提醒</string>
    <string name="account_summary">定时自动添加账单</string>
    <string name="alarm_summary">设置记账提醒</string>
    <string name="backup_summary">自动数据备份</string>
    <string name="auto_keep_account_key">auto_keep_account</string>
    <string name="auto_alarm_key">auto_alarm</string>
    <string name="auto_backup_key">auto_backup</string>

    <!-- Security Preferences-->
    <string name="password_title">密码保护</string>
    <string name="text_password_title">设置文字密码</string>
    <string name="change_text_password_title">更改文字密码</string>
    <string name="graph_password_title">设置图形密码</string>
    <string name="change_graph_password_title">更改图形密码</string>
    <string name="fingerprint_password_title">指纹密码</string>
    <string name="password_summary_off">使用密码保护你的隐私</string>
    <string name="password_summary_on">关闭密码保护功能</string>
    <string name="fingerprint_summary_off">使用指纹密码</string>
    <string name="password_open_key">password_open</string>
    <string name="fingerprint_password_key">fingerprint_password</string>
    <string name="text_password_key">text_password</string>
    <string name="graph_password_key">graph_password</string>


    <!-- Date Service Preferences-->
    <string name="email_title">绑定邮箱</string>
    <string name="data_input_title">数据导入</string>
    <string name="data_output_title">数据导出</string>
    <string name="email_summary">绑定邮箱用于导出用户数据</string>
    <string name="data_output_summary">将账单信息以CSV文件形式导出</string>
    <string name="data_input_summary">导入CSV文件</string>
    <string name="email_setting_key">email_setting</string>
    <string name="data_output_key">data_output</string>
    <string name="data_input_key">data_input</string>

    <!--Other Setting Preferences-->
    <string name="clear_all_data_title">删除所有数据</string>
    <string name="clear_all_data_summary">删除所有账单信息</string>
    <string name="clear_all_data_key">clear_all_data</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_select_account">SelectAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>