<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/auto_task_header">

        <Preference
            app:key="@string/auto_keep_account_key"
            app:title="@string/account_title"
            app:summary="@string/account_summary" />

        <Preference
            app:key="@string/auto_alarm_key"
            app:title="@string/alarm_title"
            app:summary="@string/alarm_summary" />

        <Preference
            app:key="@string/auto_backup_key"
            app:title="@string/backup_title"
            app:summary="@string/backup_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_header">

        <SwitchPreferenceCompat
            app:persistent="true"
            app:key="@string/password_open_key"
            app:title="@string/password_title"
            app:summaryOff="@string/password_summary_off"
            app:summaryOn="@string/password_summary_on"
            />

        <SwitchPreferenceCompat
            app:persistent="true"
            app:dependency="@string/password_open_key"
            app:key="@string/fingerprint_password_key"
            app:summaryOff="@string/fingerprint_summary_off"
            app:title="@string/fingerprint_password_title" />

        <SwitchPreferenceCompat
            app:persistent="true"
            app:dependency="@string/password_open_key"
            app:key="@string/text_password_key"
            app:summaryOff="@string/fingerprint_summary_off"
            app:summaryOn="@string/fingerprint_summary_off"
            app:title="@string/text_password_title" />

        <SwitchPreferenceCompat
            app:persistent="true"
            app:dependency="@string/password_open_key"
            app:key="@string/graph_password_key"
            app:summaryOff="@string/fingerprint_summary_off"
            app:summaryOn="@string/fingerprint_summary_off"
            app:title="@string/graph_password_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/date_service_header">
        <Preference
            app:persistent="true"
            app:key="@string/email_setting_key"
            app:title="@string/email_title"
            app:useSimpleSummaryProvider="false"
            app:summary="@string/email_summary"
        />
        <Preference

            app:key="@string/data_output_key"
            app:title="@string/data_output_title"
            app:summary="@string/data_output_summary" />

        <Preference

            app:key="@string/data_input_key"
            app:title="@string/data_input_title"
            app:summary="@string/data_input_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/others_header">
        <Preference

            app:key="@string/clear_all_data_key"
            app:title="@string/clear_all_data_title"
            app:summary="@string/clear_all_data_summary" />
    </PreferenceCategory>

</PreferenceScreen>